# tbb_base_env

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindTBB.cmake
src/: main.cpp  tbb_hello.cpp  tbb_hello.h
